--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -6,17 +6,21 @@ default: &default
 
 development:
   <<: *default
-  database: yunari_dev
-  username: nayru
+  database: dev_database_name
+  username: dev_username
+  password: dev_password
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: yunari_test
-  username: nayru
+  database: test_database_name
+  username: test_username
+  password: test_password
 
 production:
   <<: *default
-  database: yunari_prod
+  database: prod_databse_name
+  username: prod_username
+  password: prod_password
